--- a/backend/views/index.hbs
+++ b/backend/views/index.hbs
@@ -1,4 +1,6 @@
-<h1>{{title}}</h1>
-<p>{{message}}</p>
-<a href="/posts">查看文章列表</a>
+<section class="welcome">
+  <h1>{{title}}</h1>
+  <p>{{message}}</p>
+  <a class="btn" href="/posts">查看文章列表</a>
+</section>
 
