--- a/backend/views/partials/sidebar.hbs
+++ b/backend/views/partials/sidebar.hbs
@@ -1,4 +1,7 @@
 <aside class="sidebar">
-  <p>total posts: {{totalPosts}}</p>
-  <p>total comments: {{totalComments}}</p>
+  <h2 class="sidebar-title">totals</h2>
+  <ul class="sidebar-stats">
+    <li>posts <strong>{{totalPosts}}</strong></li>
+    <li>comments <strong>{{totalComments}}</strong></li>
+  </ul>
 </aside>
