--- a/backend/views/partials/comments.hbs
+++ b/backend/views/partials/comments.hbs
@@ -1,5 +1,5 @@
 <section class="comments">
-  <h4 class="comments-title">comments ({{post.comments.length}})</h4>
+  <h4 class="comments-title">留言 ({{post.comments.length}})</h4>
   {{#if post.comments.length}}
     <ul class="comment-list">
       {{#each post.comments}}
@@ -7,10 +7,10 @@
       {{/each}}
     </ul>
   {{else}}
-    <p class="no-comments">no comments yet</p>
+    <p class="no-comments">目前還沒有留言</p>
   {{/if}}
   <form class="comment-form" action="/posts/{{post._id}}/comments" method="post">
-    <textarea name="content" placeholder="say something" required></textarea>
-    <button type="submit">comment</button>
+    <textarea name="content" placeholder="寫下你的想法..." required></textarea>
+    <button type="submit">送出留言</button>
   </form>
 </section>
