feat: migrate image features to persistent mongoDB backed storage

--- a/backend/views/image.hbs
+++ b/backend/views/image.hbs
@@ -13,7 +13,7 @@
       </div>
     </div>
     <figure>
-      <img src="{{image.url}}" alt="{{image.title}}">
+      <img src="{{image.fileUrl}}" alt="{{image.title}}">
     </figure>
     {{#if image.description}}
       <p class="image-description">{{image.description}}</p>
