--- a/backend/views/layouts/main.hbs
+++ b/backend/views/layouts/main.hbs
@@ -94,7 +94,6 @@
       <div class="brand">ImageSpace</div>
       <nav class="nav-links">
         <a class="nav-link" href="/">首頁</a>
-        <a class="nav-link" href="/images/1">精選圖片</a>
       </nav>
     </div>
   </header>
@@ -105,7 +104,7 @@
     {{> sidebar}}
   </div>
   <footer class="footer">
-    <div class="footer-inner">© {{currentYear}} ImageSpace 影像共享平台</div>
+    <div class="footer-inner">© {{currentYear}} ImageSpace</div>
   </footer>
   <script src="/js/scripts.js" defer></script>
 </body>
